--- a/theme.html
+++ b/theme.html
@@ -36,9 +36,9 @@
 					<div class="title">
 						<h1>{{ site.name }}</h1>
 					</div>
-					<a class="logo" href="/">
+					<!-- <a class="logo" href="/">
 						<img class="avatar" src="{{ site.avatar }}" alt="{{ site.author }}" width="100%" height="100%" />
-					</a>
+					</a> -->
 					<!-- <div class="site-description"> <!-- Begin Seiten - Statisch und flexibel -->
 						<hr color="white"> <!-- Begin statische Seiten -->
 						<ul>
