--- a/theme.html
+++ b/theme.html
@@ -32,9 +32,8 @@
 			<div class="row">
 				<div class="span4 header">
 					<div class="gradient"></div>
-					<div class="title">
-						<h1>{{ site.name }}</h1>
-					</div>
+					<!-- <div class="title"><h1>{{ site.name }}</h1></div> -->
+					<div class="title"><h1>Forum</h1></div>
 				</div>
 			</div>
 			<div class="row wrapper">
